--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,69 @@
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 aiofiles
 aiohttp
+apscheduler
 asyncio
+bard
+stripe==10.7.0
+mysql-connector-python==9.0.0
+telebot==0.0.5
+youtube_dl==2021.12.17
+bing_image_downloader 
 beautifulsoup4
+bs4
+cloudscraper
+deepai
+daxxhub
 dnspython
+emojis
 ffmpeg-python
+Faker
+future==1.0.0
 gitpython
+gpytranslate
+gtts
 hachoir
 heroku3
-motor
+httpx==0.27.0
+img2pdf
+instaloader
+lexica-api
+motor 
+MukeshAPI
 numpy
+openai==0.28.0
 opencv-python
-pillow==9.5.0
+pillow==10.3.0
 psutil
-py-tgcalls==0.9.7
+pyrogram
+pickledb
+pornhub-api==0.3.0
+pycountry
+pycryptodome
+pydub
+pyfiglet
 pykeyboard
-pyrogram==2.0.106
 python-dotenv
-pyyaml
+python-telegram-bot==21.1.1
+python-whois
+pyshorteners
+pyttsx3
+pytz
+pytube
+py-tgcalls==0.9.7
+pyyaml==6.0.1
+qrcode
 requests
+SafoneAPI
+search_engine_parser
 speedtest-cli
+SpeechRecognition
 spotipy
+telegraph
 tgcrypto
 unidecode
-uvloop
-yt-dlp
+wget
+yt-dlp==2024.8.6
 youtube-search
 youtube-search-python
+uvloop
